<resources>
    <string name="app_name">Kyas Wallet</string>
    <string name="add_button_string">add</string>
    <string name="amount">Amount</string>
    <string name="sync_status">sync_status</string>
    <string name="recipient">Recipient</string>
    <string name="sender">Sender</string>
    <string name="save">Save</string>
    <string name="adress">jeff</string>
    <string name="settings">settings</string>
    <string name="New_Address">New address</string>
    <string name="refresh">Refresh</string>
    <string name="splash_logo">Splash logo</string>
    <string name="block">Block</string>
</resources>
