<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTransactionActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_expense_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:hapticFeedbackEnabled="false"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <ImageView
            android:id="@+id/save_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/save"
            android:scaleType="center" />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/amountTf"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/amount"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_expense_toolbar" />


    <EditText
        android:id="@+id/recipientTf"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/recipient"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/amountTf"
        app:layout_constraintTop_toBottomOf="@+id/amountTf" />





</androidx.constraintlayout.widget.ConstraintLayout>