<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="end">


    <include
        android:id="@+id/include"
        layout="@layout/main_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="center" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="end"
        android:background="?attr/colorPrimary"
        android:hapticFeedbackEnabled="false"
        app:layout_anchor="@+id/toolbar"
        app:layout_anchorGravity="center"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/add_expense_button_main"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/add_button_string"
            android:scaleType="center"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/settings_button_main"
            android:layout_marginStart="36dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/settings"
            android:scaleType="center"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/refresh_button_main"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="19dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/refresh"
            android:scaleType="center"
            android:visibility="visible" />



        <TextView
            android:id="@+id/balanceTv"
            android:layout_marginStart="70dp"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textSize="24dp"
            android:text="BALANCE K"
            android:textColor="#FFFFFF"
            />


    </androidx.appcompat.widget.Toolbar>


</androidx.coordinatorlayout.widget.CoordinatorLayout>